# scope

./: .gitmodules  CMakeLists.txt
src/: buffer.h  dataSupply.cpp  dataSupply.h  gui.cpp  gui.h  main.cpp  shader.cpp  shader.h
tests/: buffer_test.cpp
